some new engines

--- a/engines/armv7l/engines.ini
+++ b/engines/armv7l/engines.ini
@@ -1,143 +1,146 @@
 [a-stockf]
-;Skill Level = 20
-;Ponder = False
-;SyzygyProbeLimit = 6
-;SyzygyProbeDepth = 1
-;Debug Log File =
-;Contempt = 0
-;UCI_Chess960 = False
-;nodestime = 0
-;SyzygyPath = <empty>
-;Threads = 1
-;Hash = 16
-;Clear Hash =
-;Syzygy50MoveRule = True
-;MultiPV = 1
 ;Move Overhead = 100
+;Hash = 16
+;Debug Log File = 
+;Contempt = 0
+;nodestime = 0
+;Threads = 1
+;Clear Hash = 
+;Syzygy50MoveRule = True
+;SyzygyPath = <empty>
+;Ponder = False
+;Skill Level = 20
+;MultiPV = 1
+;SyzygyProbeLimit = 6
+;UCI_Chess960 = False
+;SyzygyProbeDepth = 1
 name = Stockfish 081017
 small = stockf
-medium = Stockf8
-large = Stockfish8
+medium = Stockf 8
+large = Stockfish 8
 elo = 3360
 
 [b-texel]
-;Ponder = True
-;MinProbeDepth = 1
-;GaviotaTbCache = 1
-;UCI_Opponent =
-;OwnBook = False
-;GaviotaTbPath =
-;Strength = 1000
-;BookFile =
-;AnalysisAgeHash = True
-;SyzygyPath =
-;Threads = 1
-;Hash = 16
-;Clear Hash =
-;UseNullMove = True
 ;MultiPV = 1
+;Hash = 16
+;AnalysisAgeHash = True
+;UCI_AnalyseMode = False
+;Threads = 1
+;SyzygyPath = 
+;MinProbeDepth = 1
+;Clear Hash = 
+;GaviotaTbCache = 1
 ;UCI_EngineAbout = Texel 1.07 32-bit by Peter Osterlund, see http://hem.bredband.net/petero2b/javachess/index.html#texel
 ;BufferTime = 1000
-;UCI_AnalyseMode = False
+;BookFile = 
+;OwnBook = False
+;Ponder = True
+;UseNullMove = True
+;UCI_Opponent = 
+;Strength = 1000
+;GaviotaTbPath = 
 name = Texel 1.07 32-bit
-small = Texel7
+small = Texel
 medium = Texel107
-large = Texel 107
+large = Texel107
 elo = 3050
 
 [c-arasan]
-;Tablebases = None
-;SyzygyTbPath = syzygy
-;SyzygyProbeDepth = 4
-;Use tablebases = False
-;SyzygyUse50MoveRule = True
-;OwnBook = True
-;UCI_LimitStrength = False
-;Ponder = True
-;Threads = 1
-;Hash = 32
-;UCI_Elo = 2600
 ;MultiPV = 1
+;Hash = 32
 ;Book selectivity = 50
-name = Arasan v20.3.0-36-g8751612
+;Threads = 1
+;Tablebases = None
+;Use tablebases = False
+;SyzygyTbPath = syzygy
+;UCI_Elo = 2600
+;OwnBook = True
+;Ponder = True
+;Contempt = 0
+;UCI_LimitStrength = False
+;SyzygyUse50MoveRule = True
+;SyzygyProbeDepth = 4
+name = Arasan v20.4.1-5-g3ed187e
 small = arasan
 medium = Arasan20
-large = Arasan 2030
-elo = 2980
+large = Arasan 2041
+elo = 2500
 
 [d-rodent]
-;VerboseBook = True
+;VerboseBook = False
+;Hash = 16
+;Verbose = False
+;UseBook = True
 ;Ponder = False
 ;Threads = 1
-;Hash = 16
-;Clear Hash =
-;UseBook = True
+;MultiPV = 1
 ;PersonalityFile = default.txt
+;Clear Hash = 
 ;TimeBuffer = 10
-name = Rodent III 0.233 32-bit/GCC 6.3.0 20170516
+name = Rodent III 0.240 32-bit/GCC 6.3.0 20170516
 small = rodent
 medium = Rodent3
-large = Rodent3 233
+large = Rodent3 240
 elo = 2920
 
 [e-zurich]
 ;MultiPV = 1
-;Ponder = True
-;Handicap Level = 0
-;UCI_AnalyseMode = False
 ;Hash = 64
-name = zurichess Neuchatel
+;UCI_AnalyseMode = False
+;Handicap Level = 0
+;Ponder = True
+name = zurichess neuchatel
 small = zurich
-medium = Zurich n
-large = Zurichess n
+medium = zurich
+large = zurichess
 elo = 2790
 
 [f-wyld]
-;KnightOutpostEg = 10
-;MoveOverhead = 30
-;RookOn7thMg = 40
-;KingShelterCloseEg = 10
-;QueenKingAtkWt = 5
-;RookValueEg = 550
-;PawnValueMg = 90
-;QueenMobilityWt = 4
-;KnightValueMg = 400
-;RookValueMg = 700
-;RookSemiOpenFileMg = 5
-;DoubledPawnsMg = -10
-;BishopOutpostEg = 5
-;KnightMobilityWt = 8
-;BishopPairMg = 50
-;RookKingAtkWt = 4
-;BishopOutpostMg = 10
-;PawnValueEg = 100
-;QueenValueEg = 1100
-;Hash = 128
-;KnightOutpostMg = 20
-;BishopPairEg = 80
+;BishopKingAtkWt = 3
 ;KingShelterFarMg = 10
 ;Threads = 1
-;BishopValueEg = 330
-;RookMobilityWt = 5
 ;QueenValueMg = 1300
-;DoubledPawnsEg = -10
-;RookOpenFileMg = 20
 ;KnightValueEg = 320
-;BishopValueMg = 400
-;BishopKingAtkWt = 3
-;PersonaPath = <empty>
-;KnightKingAtkWt = 3
-;RookOpenFileEg = 20
-;Ponder = True
-;RookOn7thEg = 20
+;QueenValueEg = 1100
 ;RookSemiOpenFileEg = 5
-;KingShelterCloseMg = 20
-;IsolatedPawnMg = -10
-;KingShelterFarEg = 5
-;UCI_Chess960 = False
+;RookKingAtkWt = 4
+;KnightMobilityWt = 8
+;BishopOutpostEg = 5
+;RookValueEg = 550
+;PersonaPath = <empty>
+;KingShelterCloseEg = 10
+;KnightOutpostEg = 10
+;PawnValueEg = 100
+;BishopPairEg = 80
+;RookValueMg = 700
+;DoubledPawnsEg = -10
+;BishopOutpostMg = 10
+;RookOn7thMg = 40
 ;SyzygyPath = <empty>
+;KingShelterFarEg = 5
+;KnightKingAtkWt = 3
+;Ponder = True
+;Hash = 128
+;BishopPairMg = 50
+;BishopValueEg = 330
+;KingShelterCloseMg = 20
+;DoubledPawnsMg = -10
+;QueenMobilityWt = 4
 ;IsolatedPawnEg = -10
+;KnightValueMg = 400
+;UCI_Chess960 = False
+;KnightOutpostMg = 20
+;RookSemiOpenFileMg = 5
+;BishopValueMg = 400
+;IsolatedPawnMg = -10
+;MoveOverhead = 30
 ;BishopMobilityWt = 5
+;QueenKingAtkWt = 5
+;RookOn7thEg = 20
+;PawnValueMg = 90
+;RookMobilityWt = 5
+;RookOpenFileEg = 20
+;RookOpenFileMg = 20
 name = WyldChess 10062017
 small = wyld
 medium = Wyld Chs
@@ -145,26 +148,26 @@ large = WyldChess
 elo = 2630
 
 [g-galjoe]
-;Debug = False
-;UCI_Chess960 = False
-;Ponder = True
-;UCI_LimitStrength = False
-;MultiPV = 1
-;UCI_Elo = 2000
 ;Hash = 128
+;UCI_Elo = 2000
 ;OwnBook = False
+;Ponder = True
+;MultiPV = 1
+;UCI_LimitStrength = False
+;UCI_Chess960 = False
+;Debug = False
 name = Galjoen 0.37.2
 small = galjoe
 medium = Galjoen
 large = Galjoen0372
-elo = 2110
+elo = 2500
 
 [h-sayuri]
-;Clear Hash =
-;Ponder = True
 ;Threads = 1
-;UCI_AnalyseMode = False
 ;Hash = 1
+;UCI_AnalyseMode = False
+;Clear Hash = 
+;Ponder = True
 name = Sayuri 2017.12.16
 small = sayuri
 medium = Sayuri
@@ -172,173 +175,174 @@ large = Sayuri
 elo = 1850
 
 [i-floyd]
-;Clear Hash =
-;Ponder = True
 ;Hash = 128
+;Clear Hash = 
+;Ponder = True
 name = Floyd 0.9
-small = Floyd9
-medium = Floyd 09
-large = Floyd 09
-elo = 2590
+small = floyd
+medium = Floyd09
+large = Floyd09
+elo = 2500
 
 [l-laser]
-;Threads = 1
 ;SyzygyPath = <empty>
 ;Hash = 16
-;ScaleMaterial = 100
-;Ponder = False
-;MultiPV = 1
 ;ScaleKingSafety = 100
+;MultiPV = 1
+;Threads = 1
 ;EvalCache = 16
+;Ponder = False
+;ScaleMaterial = 100
 ;BufferTime = 300
-name = Laser 1.5
-small = Laser
-medium = Laser15
-large = Laser15
-elo = 2960
+name = Laser 1.6 beta
+small = laser
+medium = Laser16
+large = Laser16beta
+elo = 2500
 
 [m-cinnam]
-;PerftThreads = 1
 ;Hash = 64
-;Ponder = False
-;TB Restart =
-;GaviotaTbCache = 32
-;Book File = cinnamon.bin
-;OwnBook = False
-;TB Endgame = none
-;Nullmove = True
 ;PerftHashSize = 0
-;PerftDumpFile =
-;TB probing depth = 0
-;Threads = 1
-;GaviotaTbPath = gtb/gtb4
-;Clear Hash =
-;GaviotaTbScheme = cp4
 ;TB Pieces installed = 3
+;Threads = 1
+;TB probing depth = 0
+;Nullmove = True
+;Clear Hash = 
+;TB Endgame = none
+;PerftThreads = 1
+;GaviotaTbCache = 32
+;GaviotaTbPath = gtb/gtb4
+;OwnBook = False
+;Ponder = False
+;Book File = cinnamon.bin
+;TB Restart = 
+;GaviotaTbScheme = cp4
+;PerftDumpFile = 
 name = Cinnamon 2.0-20160502
 small = cinnam
 medium = Cinnamon
 large = Cinnamon 20
-elo = 2030
+elo = 2500
 
 [r-roboci]
-;PawnRank3EG = 10
-;TempoKQQKQQMG = 500
-;RookMobilityFileMG = 20
-;RookOn7thMG = 50
-;RookPawnAffinityMG = -70
+;PawnIsolatedEG = -200
+;TempoKQKQMG = 200
 ;TempoKQKQEG = 200
-;KingCastlingMobilityKQMG = 200
-;QueenMG = 10000
-;KingShieldCloseMG = 150
-;KingCastlingMobilityQEG = 0
+;RookPawnAffinityEG = -70
+;PawnRank7EG = 150
+;PawnPassedQuadAEG = 50
 ;NullReduction = 1
-;WeightFactor = 144
+;PawnFilesCFMG = 0
+;PawnPassedQuadCEG = 50
 ;OppositeBishopFactorMG = 256
-;TempoKQQKQQEG = 500
-;PawnRank7MG = 50
-;PawnMG = 900
+;PawnRank2MG = 0
+;BishopPairEG = 500
+;BishopMobilityEG = 30
+;RookEG = 5350
+;KingShieldFarMG = 50
+;KingShieldFarEG = 0
+;MatHash = 1
+;PawnCentreEG = 0
+;PawnBlockedEG = -100
+;RookMG = 5350
+;PawnPassedQuadBMG = -109
+;Hash = 16
 ;BishopPairMG = 500
 ;Ponder = True
-;KnightPawnAffinityEG = 30
-;MatHash = 1
-;PawnBlockedMG = -100
-;KingCastlingMobilityNoneEG = 0
-;PawnFilesBGEG = 0
-;PawnDoubledMG = -100
-;PawnDoubledEG = -200
-;KingCastlingMobilityQMG = 100
-;PawnIsolatedMG = -300
-;PawnFilesAHEG = -50
-;RookTrappedMG = -400
-;PawnPassedQuadCMG = 155
-;Clear PawnHash =
-;PawnFilesAHMG = -100
-;HalfMoveFactor = 2048
-;PawnOuterCentreEG = 0
-;RookOpenFileMG = 100
-;Clear Hash =
-;PawnCentreEG = 0
-;PawnPassedQuadAMG = 56
-;Hash = 16
-;PawnFilesCFEG = 0
-;PawnCentreMG = 200
-;QueenEG = 10000
-;RookOpenFileEG = 50
-;KnightMG = 3100
-;RookOn7thEG = 100
-;PawnFilesBGMG = -50
-;KingCastlingMobilityKMG = 100
-;PawnRank2MG = 0
-;RookTrappedEG = 0
-;BishopMG = 3010
-;Clear MatHash =
-;IIDMin = 2
-;KingShieldCloseEG = 0
-;PawnFilesDEEG = 50
-;RookMobilityRankEG = 20
-;PawnRank5EG = 80
-;TempoMG = 35
-;OppositeBishopFactorEG = 192
-;KnightEG = 3100
-;KingShieldFarMG = 50
-;PawnBlockedEG = -100
-;PawnOuterCentreMG = 50
-;PawnHash = 1
-;PawnRank4EG = 35
-;PawnPassedQuadBEG = 50
-;RookMG = 5350
-;PawnRank2EG = 0
-;KingCastlingMobilityKEG = 0
-;PawnPassedQuadCEG = 50
-;TempoKQKQMG = 200
-;RookSemiOpenFileMG = 50
-;KingShieldFarEG = 0
 ;PawnEG = 1300
-;BishopMobilityEG = 30
-;TempoEG = 0
-;BishopMobilityMG = 40
-;RookPawnAffinityEG = -70
-;PawnPassedQuadBMG = -109
-;RookMobilityRankMG = 10
-;BishopPairEG = 500
-;KingCastlingMobilityKQEG = 0
-;RookEG = 5350
-;PawnFilesCFMG = 0
-;PawnRank3MG = 10
-;BishopEG = 3070
-;PawnRank5MG = 30
-;PawnRank6MG = 40
-;PawnRank6EG = 110
-;PawnRank7EG = 150
-;PawnFilesDEMG = 50
-;KingCastlingMobilityNoneMG = 0
-;RookSemiOpenFileEG = 20
-;IIDReduction = 3
-;KnightPawnAffinityMG = 30
-;PawnPassedQuadAEG = 50
 ;PawnRank4MG = 20
-;PawnIsolatedEG = -200
+;KingShieldCloseMG = 150
+;HalfMoveFactor = 2048
+;QueenMG = 10000
+;KnightPawnAffinityEG = 30
+;OppositeBishopFactorEG = 192
+;RookMobilityRankEG = 20
+;PawnCentreMG = 200
+;RookPawnAffinityMG = -70
+;QueenEG = 10000
+;RookSemiOpenFileMG = 50
+;KingCastlingMobilityNoneEG = 0
+;PawnOuterCentreMG = 50
+;KingShieldCloseEG = 0
+;KnightPawnAffinityMG = 30
+;PawnPassedQuadAMG = 56
+;RookOn7thEG = 100
+;PawnFilesAHEG = -50
+;TempoKQQKQQMG = 500
+;PawnOuterCentreEG = 0
+;PawnFilesCFEG = 0
+;IIDReduction = 3
+;RookSemiOpenFileEG = 20
+;Clear MatHash = 
+;IIDMin = 2
+;BishopMG = 3010
+;PawnRank3EG = 10
+;PawnRank2EG = 0
+;BishopMobilityMG = 40
+;KnightEG = 3100
+;RookMobilityFileMG = 20
+;BishopEG = 3070
+;TempoEG = 0
+;KingCastlingMobilityKQMG = 200
+;PawnFilesDEEG = 50
+;PawnFilesBGEG = 0
+;KingCastlingMobilityQMG = 100
+;Clear PawnHash = 
+;TempoMG = 35
+;RookOn7thMG = 50
+;PawnPassedQuadBEG = 50
+;PawnFilesDEMG = 50
+;PawnHash = 1
 ;RookMobilityFileEG = 30
+;KingCastlingMobilityKEG = 0
+;RookTrappedMG = -400
+;PawnRank3MG = 10
+;RookMobilityRankMG = 10
+;KingCastlingMobilityKMG = 100
+;KnightMG = 3100
+;PawnPassedQuadCMG = 155
+;PawnIsolatedMG = -300
+;Clear Hash = 
+;PawnRank6MG = 40
+;TempoKQQKQQEG = 500
+;KingCastlingMobilityQEG = 0
+;KingCastlingMobilityKQEG = 0
+;PawnDoubledEG = -200
+;PawnRank4EG = 35
+;PawnFilesBGMG = -50
+;PawnRank7MG = 50
+;PawnRank5EG = 80
+;PawnMG = 900
+;PawnFilesAHMG = -100
+;PawnRank5MG = 30
+;PawnDoubledMG = -100
+;WeightFactor = 144
+;KingCastlingMobilityNoneMG = 0
+;PawnRank6EG = 110
+;PawnBlockedMG = -100
+;RookTrappedEG = 0
+;RookOpenFileEG = 50
+;RookOpenFileMG = 100
 name = robocide
 small = roboci
-medium = Robocide
-large = Robocide
-elo = 2190
+medium = robocide
+large = robocide
+elo = 2500
 
 [v-vajole]
-;UCI_ShowCurrLine = False
-;Threads = 1
-;MultiPV = 1
+;BestMoveBook = False
 ;UCI_EngineAbout = VajoletII by Marco Belli
+;Hash = 1
+;UCI_ShowCurrLine = False
 ;OwnBook = True
 ;Ponder = True
-;BestMoveBook = False
-;Hash = 1
-;SyzygyProbeDepth = 1
+;Threads = 1
+;MultiPV = 1
 ;SyzygyPath = <empty>
-name = Vajolet2 2.4
-small = vajol2
+;SyzygyProbeDepth = 1
+name = Vajolet2 2.5
+small = vajole
 medium = Vajolet2
-large = Vajolet2 24
-elo = 2860
+large = Vajolet225
+elo = 2500
+
