remove Cinnamon engine cause still not solved its problems (this project dead?) see #248

--- a/engines/armv7l/engines.ini
+++ b/engines/armv7l/engines.ini
@@ -40,9 +40,9 @@ elo = 3360
 ;Strength = 1000
 ;GaviotaTbPath = 
 name = Texel 1.07 32-bit
-small = Texel
-medium = Texel107
-large = Texel107
+small = texel7
+medium = Texel 107
+large = Texel 107
 elo = 3050
 
 [c-arasan]
@@ -64,7 +64,7 @@ name = Arasan v20.4.1-5-g3ed187e
 small = arasan
 medium = Arasan20
 large = Arasan 2041
-elo = 2500
+elo = 2980
 
 [d-rodent]
 ;VerboseBook = False
@@ -91,8 +91,8 @@ elo = 2920
 ;Ponder = True
 name = zurichess neuchatel
 small = zurich
-medium = zurich
-large = zurichess
+medium = Zurich n
+large = Zurichess n
 elo = 2790
 
 [f-wyld]
@@ -160,7 +160,7 @@ name = Galjoen 0.37.2
 small = galjoe
 medium = Galjoen
 large = Galjoen0372
-elo = 2500
+elo = 2110
 
 [h-sayuri]
 ;Threads = 1
@@ -179,10 +179,10 @@ elo = 1850
 ;Clear Hash = 
 ;Ponder = True
 name = Floyd 0.9
-small = floyd
-medium = Floyd09
-large = Floyd09
-elo = 2500
+small = floyd9
+medium = Floyd 09
+large = Floyd 09
+elo = 2590
 
 [l-laser]
 ;SyzygyPath = <empty>
@@ -198,31 +198,7 @@ name = Laser 1.6 beta
 small = laser
 medium = Laser16
 large = Laser16beta
-elo = 2500
-
-[m-cinnam]
-;Hash = 64
-;PerftHashSize = 0
-;TB Pieces installed = 3
-;Threads = 1
-;TB probing depth = 0
-;Nullmove = True
-;Clear Hash = 
-;TB Endgame = none
-;PerftThreads = 1
-;GaviotaTbCache = 32
-;GaviotaTbPath = gtb/gtb4
-;OwnBook = False
-;Ponder = False
-;Book File = cinnamon.bin
-;TB Restart = 
-;GaviotaTbScheme = cp4
-;PerftDumpFile = 
-name = Cinnamon 2.0-20160502
-small = cinnam
-medium = Cinnamon
-large = Cinnamon 20
-elo = 2500
+elo = 2960
 
 [r-roboci]
 ;PawnIsolatedEG = -200
@@ -325,9 +301,9 @@ elo = 2500
 ;RookOpenFileMG = 100
 name = robocide
 small = roboci
-medium = robocide
-large = robocide
-elo = 2500
+medium = Robocide
+large = Robocide
+elo = 2190
 
 [v-vajole]
 ;BestMoveBook = False
@@ -343,6 +319,6 @@ elo = 2500
 name = Vajolet2 2.5
 small = vajole
 medium = Vajolet2
-large = Vajolet225
-elo = 2500
+large = Vajolet2 25
+elo = 2860
 
