armv6 engines update

--- a/engines/armv6l/engines.ini
+++ b/engines/armv6l/engines.ini
@@ -1,23 +1,25 @@
 [a-stockf]
-;Skill Level = 20
-;Ponder = False
-;SyzygyProbeLimit = 6
-;SyzygyProbeDepth = 1
 ;Debug Log File =
-;Contempt = 0
-;UCI_Chess960 = False
-;nodestime = 0
-;SyzygyPath = <empty>
-;Threads = 1
-;Hash = 16
+;SyzygyProbeLimit = 6
 ;Clear Hash =
-;Syzygy50MoveRule = True
+;Move Overhead = 30
+;SyzygyPath = <empty>
+;Hash = 16
+;Contempt = 20
+;Skill Level = 20
+;Threads = 1
+;UCI_Chess960 = False
+;SyzygyProbeDepth = 1
 ;MultiPV = 1
-;Move Overhead = 100
-name = Stockfish 081017
+;nodestime = 0
+;Syzygy50MoveRule = True
+;Slow Mover = 89
+;Minimum Thinking Time = 20
+;Ponder = False
+name = Stockfish 9
 small = stockf
-medium = Stockf8
-large = Stockfish8
+medium = Stockf 9
+large = Stockfish 9
 elo = 3360
 
 [b-texel]
@@ -46,38 +48,41 @@ large = Texel 107
 elo = 3050
 
 [c-arasan]
-;Tablebases = None
+;UCI_Elo = 2600
+;MultiPV = 1
+;Hash = 32
+;Contempt = 0
 ;SyzygyTbPath = syzygy
-;SyzygyProbeDepth = 4
-;Use tablebases = False
 ;SyzygyUse50MoveRule = True
+;SyzygyProbeDepth = 4
+;Book selectivity = 50
+;Tablebases = None
+;Threads = 1
+;Use tablebases = False
 ;OwnBook = True
 ;UCI_LimitStrength = False
 ;Ponder = True
-;Threads = 1
-;Hash = 32
-;UCI_Elo = 2600
-;MultiPV = 1
-;Book selectivity = 50
-name = Arasan v20.2.0-40-gfd17cc2
+name = Arasan v20.4.1-5-g3ed187e
 small = arasan
 medium = Arasan20
-large = Arasan 2020
+large = Arasan 2041
 elo = 2980
 
 [d-rodent]
-;VerboseBook = True
-;Ponder = False
-;Threads = 1
-;Hash = 16
-;Clear Hash =
+;TimeBuffer = 10
+;MultiPV = 1
+;Verbose = False
 ;UseBook = True
 ;PersonalityFile = default.txt
-;TimeBuffer = 10
-name = Rodent III 0.228 32-bit/GCC 6.3.0 20170516
+;Clear Hash =
+;VerboseBook = False
+;Hash = 16
+;Ponder = False
+;Threads = 1
+name = Rodent III 0.240 32-bit/GCC 6.3.0 20170516
 small = rodent
 medium = Rodent3
-large = Rodent3 228
+large = Rodent3 240
 elo = 2920
 
 [e-zurich]
