--- a/engines/armv7l/engines.ini
+++ b/engines/armv7l/engines.ini
@@ -1,23 +1,25 @@
 [a-stockf]
-;Move Overhead = 100
-;Hash = 16
-;Debug Log File = 
-;Contempt = 0
-;nodestime = 0
-;Threads = 1
-;Clear Hash = 
-;Syzygy50MoveRule = True
-;SyzygyPath = <empty>
-;Ponder = False
-;Skill Level = 20
-;MultiPV = 1
+;Debug Log File =
 ;SyzygyProbeLimit = 6
+;Clear Hash =
+;Move Overhead = 30
+;SyzygyPath = <empty>
+;Hash = 16
+;Contempt = 20
+;Skill Level = 20
+;Threads = 1
 ;UCI_Chess960 = False
 ;SyzygyProbeDepth = 1
-name = Stockfish 081017
+;MultiPV = 1
+;nodestime = 0
+;Syzygy50MoveRule = True
+;Slow Mover = 89
+;Minimum Thinking Time = 20
+;Ponder = False
+name = Stockfish 9
 small = stockf
-medium = Stockf 8
-large = Stockfish 8
+medium = Stockf 9
+large = Stockfish 9
 elo = 3360
 
 [b-texel]
@@ -196,7 +198,7 @@ elo = 2590
 ;BufferTime = 300
 name = Laser 1.6 beta
 small = laser
-medium = Laser16
+medium = Laser 16
 large = Laser16beta
 elo = 2960
 
