arasan & laser in new versions

--- a/engines/armv7l/engines.ini
+++ b/engines/armv7l/engines.ini
@@ -62,10 +62,10 @@ elo = 3050
 ;UCI_LimitStrength = False
 ;SyzygyUse50MoveRule = True
 ;SyzygyProbeDepth = 4
-name = Arasan v20.4.1-5-g3ed187e
+name = Arasan TCEC12-17-g6719b28
 small = arasan
-medium = Arasan20
-large = Arasan 2041
+medium = Arasan12
+large = Arasan 1217
 elo = 2980
 
 [d-rodent]
