update engines: arasan, rodentIII, laser, robocide, vajolet

--- a/engines/armv7l/engines.ini
+++ b/engines/armv7l/engines.ini
@@ -43,7 +43,7 @@ elo = 3360
 ;GaviotaTbPath = 
 name = Texel 1.07 32-bit
 small = texel7
-medium = Texel 107
+medium = Texel107
 large = Texel 107
 elo = 3050
 
@@ -62,10 +62,10 @@ elo = 3050
 ;UCI_LimitStrength = False
 ;SyzygyUse50MoveRule = True
 ;SyzygyProbeDepth = 4
-name = Arasan TCEC12-17-g6719b28
+name = Arasan TCEC12-66-gfef6f5b
 small = arasan
 medium = Arasan12
-large = Arasan 1217
+large = Arasan 1266
 elo = 2980
 
 [d-rodent]
@@ -79,10 +79,10 @@ elo = 2980
 ;PersonalityFile = default.txt
 ;Clear Hash = 
 ;TimeBuffer = 10
-name = Rodent III 0.240 32-bit/GCC 6.3.0 20170516
+name = Rodent III 0.250 32-bit/GCC 6.3.0 20170516
 small = rodent
 medium = Rodent3
-large = Rodent3 240
+large = Rodent3 250
 elo = 2920
 
 [e-zurich]
@@ -93,8 +93,8 @@ elo = 2920
 ;Ponder = True
 name = zurichess neuchatel
 small = zurich
-medium = Zurich n
-large = Zurichess n
+medium = Zurich N
+large = Zurichess N
 elo = 2790
 
 [f-wyld]
@@ -158,10 +158,10 @@ elo = 2630
 ;UCI_LimitStrength = False
 ;UCI_Chess960 = False
 ;Debug = False
-name = Galjoen 0.37.2
+name = Galjoen 0.38
 small = galjoe
 medium = Galjoen
-large = Galjoen0372
+large = Galjoen 038
 elo = 2110
 
 [h-sayuri]
@@ -170,7 +170,7 @@ elo = 2110
 ;UCI_AnalyseMode = False
 ;Clear Hash = 
 ;Ponder = True
-name = Sayuri 2017.12.16
+name = Sayuri 2018.03.06
 small = sayuri
 medium = Sayuri
 large = Sayuri
