new engine versions (mainly for "armv6")

--- a/engines/armv6l/engines.ini
+++ b/engines/armv6l/engines.ini
@@ -1,21 +1,21 @@
 [a-stockf]
-;Debug Log File =
-;SyzygyProbeLimit = 6
-;Clear Hash =
-;Move Overhead = 30
-;SyzygyPath = <empty>
-;Hash = 16
-;Contempt = 20
 ;Skill Level = 20
-;Threads = 1
-;UCI_Chess960 = False
-;SyzygyProbeDepth = 1
+;Move Overhead = 30
+;Contempt = 20
 ;MultiPV = 1
-;nodestime = 0
+;SyzygyProbeLimit = 6
+;SyzygyProbeDepth = 1
+;Hash = 16
+;UCI_Chess960 = False
 ;Syzygy50MoveRule = True
-;Slow Mover = 89
-;Minimum Thinking Time = 20
+;nodestime = 0
+;SyzygyPath = <empty>
 ;Ponder = False
+;Debug Log File = 
+;Clear Hash = 
+;Minimum Thinking Time = 20
+;Threads = 1
+;Slow Mover = 89
 name = Stockfish 9
 small = stockf
 medium = Stockf 9
@@ -23,61 +23,99 @@ large = Stockfish 9
 elo = 3360
 
 [b-texel]
-;Ponder = True
-;MinProbeDepth = 1
-;GaviotaTbCache = 1
-;UCI_Opponent =
-;OwnBook = False
-;GaviotaTbPath =
-;Strength = 1000
-;BookFile =
 ;AnalysisAgeHash = True
-;SyzygyPath =
-;Threads = 1
-;Hash = 16
-;Clear Hash =
-;UseNullMove = True
+;Strength = 1000
 ;MultiPV = 1
-;UCI_EngineAbout = Texel 1.07 32-bit by Peter Osterlund, see http://hem.bredband.net/petero2b/javachess/index.html#texel
-;BufferTime = 1000
 ;UCI_AnalyseMode = False
+;GaviotaTbPath = 
+;OwnBook = False
+;Hash = 16
+;GaviotaTbCache = 1
+;UCI_Opponent = 
+;BufferTime = 1000
+;MinProbeDepth = 1
+;UCI_EngineAbout = Texel 1.07 32-bit by Peter Osterlund, see http://hem.bredband.net/petero2b/javachess/index.html#texel
+;SyzygyPath = 
+;Ponder = True
+;Clear Hash = 
+;BookFile = 
+;Threads = 1
+;UseNullMove = True
 name = Texel 1.07 32-bit
-small = Texel7
+small = texel7
 medium = Texel107
 large = Texel 107
 elo = 3050
 
 [c-arasan]
-;UCI_Elo = 2600
-;MultiPV = 1
 ;Hash = 32
-;Contempt = 0
-;SyzygyTbPath = syzygy
-;SyzygyUse50MoveRule = True
-;SyzygyProbeDepth = 4
-;Book selectivity = 50
-;Tablebases = None
-;Threads = 1
-;Use tablebases = False
+;MultiPV = 1
+;Favor frequent book moves = 10
 ;OwnBook = True
+;Contempt = 0
 ;UCI_LimitStrength = False
+;UCI_Elo = 2600
+;Use tablebases = False
 ;Ponder = True
-name = Arasan v20.4.1-5-g3ed187e
+;SyzygyTbPath = syzygy
+;SyzygyProbeDepth = 4
+;Threads = 1
+;Favor best book moves = 50
+;SyzygyUse50MoveRule = True
+name = Arasan v21.0.0-21-geac5c47
 small = arasan
-medium = Arasan20
-large = Arasan 2041
+medium = Arasan21
+large = Arasan 2100
 elo = 2980
 
 [d-rodent]
-;TimeBuffer = 10
-;MultiPV = 1
 ;Verbose = False
-;UseBook = True
-;PersonalityFile = default.txt
-;Clear Hash =
-;VerboseBook = False
-;Hash = 16
+;KeepPawn = 0
+;MultiPV = 1
+;Fianchetto = 6
 ;Ponder = False
+;PawnValue = 95
+;Forwardness = 0
+;BishopPair = 51
+;Outposts = 78
+;Hash = 16
+;OwnMobility = 100
+;PiecePressure = 109
+;PassedPawns = 100
+;PstStyle = 0
+;OwnAttack = 100
+;KingTropism = 20
+;OppAttack = 100
+;EvalBlur = 0
+;KeepKnight = 0
+;QueenValue = 1000
+;PawnStorm = 99
+;NpsLimit = 0
+;KnightValue = 310
+;PiecePlacement = 75
+;Selectivity = 175
+;TimeBuffer = 10
+;RookValue = 514
+;Material = 100
+;GuideBookFile = guide.bin
+;PawnStructure = 100
+;ExchangeImbalance = 30
+;Clear Hash = 
+;MainBookFile = rodent.bin
+;VerboseBook = False
+;Lines = 100
+;RiskyDepth = 0
+;SearchSkill = 10
+;PawnShield = 119
+;Contempt = 0
+;KeepBishop = 0
+;KnightLikesClosed = 6
+;BishopValue = 322
+;SlowMover = 100
+;KeepQueen = 0
+;UseBook = True
+;KeepRook = 0
+;OppMobility = 100
 ;Threads = 1
 name = Rodent III 0.240 32-bit/GCC 6.3.0 20170516
 small = rodent
@@ -91,97 +129,229 @@ elo = 2920
 ;Handicap Level = 0
 ;UCI_AnalyseMode = False
 ;Hash = 64
-name = zurichess geneva
+name = zurichess neuchatel
 small = zurich
-medium = Zurich g
-large = Zurichess g
+medium = Zurich N
+large = Zurichess N
 elo = 2790
 
 [f-wyld]
-;KnightOutpostEg = 10
-;MoveOverhead = 30
-;RookOn7thMg = 40
-;KingShelterCloseEg = 10
-;QueenKingAtkWt = 5
-;RookValueEg = 550
-;PawnValueMg = 90
-;QueenMobilityWt = 4
-;KnightValueMg = 400
-;RookValueMg = 700
-;RookSemiOpenFileMg = 5
-;DoubledPawnsMg = -10
-;BishopOutpostEg = 5
-;KnightMobilityWt = 8
-;BishopPairMg = 50
-;RookKingAtkWt = 4
-;BishopOutpostMg = 10
-;PawnValueEg = 100
-;QueenValueEg = 1100
-;Hash = 128
-;KnightOutpostMg = 20
-;BishopPairEg = 80
+;BishopMobilityWt = 5
 ;KingShelterFarMg = 10
-;Threads = 1
-;BishopValueEg = 330
-;RookMobilityWt = 5
-;QueenValueMg = 1300
-;DoubledPawnsEg = -10
-;RookOpenFileMg = 20
 ;KnightValueEg = 320
+;KnightMobilityWt = 8
+;QueenValueEg = 1000
+;KingShelterFarEg = 5
+;Hash = 128
+;RookValueMg = 600
+;KingShelterCloseMg = 20
 ;BishopValueMg = 400
-;BishopKingAtkWt = 3
-;PersonaPath = <empty>
-;KnightKingAtkWt = 3
-;RookOpenFileEg = 20
+;SyzygyPath = <empty>
 ;Ponder = True
 ;RookOn7thEg = 20
-;RookSemiOpenFileEg = 5
-;KingShelterCloseMg = 20
+;BishopOutpostEg = 5
+;KnightOutpostEg = 10
+;MoveOverhead = 30
+;DoubledPawnsMg = -10
+;RookOpenFileMg = 20
+;KingShelterCloseEg = 10
+;RookOn7thMg = 40
+;BishopValueEg = 330
+;QueenKingAtkWt = 5
 ;IsolatedPawnMg = -10
-;KingShelterFarEg = 5
-;UCI_Chess960 = False
-;SyzygyPath = <empty>
+;DoubledPawnsEg = -10
 ;IsolatedPawnEg = -10
-;BishopMobilityWt = 5
-name = WyldChess 10062017
+;BishopOutpostMg = 10
+;PawnValueEg = 100
+;KnightOutpostMg = 20
+;KnightKingAtkWt = 3
+;BishopPairEg = 80
+;PawnValueMg = 90
+;RookValueEg = 550
+;PersonaPath = <empty>
+;BishopKingAtkWt = 3
+;QueenValueMg = 1200
+;UCI_Chess960 = False
+;RookOpenFileEg = 20
+;KnightValueMg = 400
+;BishopPairMg = 50
+;RookKingAtkWt = 4
+;RookSemiOpenFileEg = 5
+;QueenMobilityWt = 4
+;Threads = 1
+;RookMobilityWt = 5
+;RookSemiOpenFileMg = 5
+name = WyldChess 20112017
 small = wyld
 medium = Wyld Chs
 large = WyldChess
 elo = 2630
 
 [g-galjoe]
-;UCI_Elo = 2000
-;Ponder = True
-;UCI_Chess960 = False
-;Hash = 128
-;UCI_LimitStrength = False
-;OwnBook = False
-;MultiPV = 1
 ;Debug = False
-name = Galjoen 0.37.2
+;UCI_Elo = 2000
+;MultiPV = 1
+;Ponder = True
+;OwnBook = False
+;Hash = 128
+;UCI_Chess960 = False
+;UCI_LimitStrength = False
+name = Galjoen 0.38
 small = galjoe
 medium = Galjoen
-large = Galjoen0372
+large = Galjoen038
 elo = 2110
 
 [h-sayuri]
-;Clear Hash =
+;UCI_AnalyseMode = False
+;Clear Hash = 
 ;Ponder = True
 ;Threads = 1
-;UCI_AnalyseMode = False
 ;Hash = 1
-name = Sayuri 2017.12.16
+name = Sayuri 2018.05.23
 small = sayuri
 medium = Sayuri
 large = Sayuri
 elo = 1850
 
 [i-floyd]
-;Clear Hash =
+;Clear Hash = 
 ;Ponder = True
 ;Hash = 128
 name = Floyd 0.9
-small = Floyd9
-medium = Floyd 09
-large = Floyd 09
+small = floyd
+medium = Floyd09
+large = Floyd09
 elo = 2590
+
+[l-laser]
+;BufferTime = 300
+;SyzygyPath = <empty>
+;MultiPV = 1
+;Ponder = False
+;ScaleMaterial = 100
+;Hash = 16
+;ScaleKingSafety = 100
+;EvalCache = 16
+;Threads = 1
+name = Laser 1.6 beta
+small = laser
+medium = Laser16
+large = Laser16beta
+elo = 2500
+
+[r-roboci]
+;PawnOuterCentreMG = 50
+;PawnPassedQuadAMG = 56
+;PawnRank2EG = 0
+;RookMobilityFileMG = 20
+;KingShieldFarEG = 0
+;PawnIsolatedEG = -200
+;BishopEG = 3070
+;KnightMG = 3100
+;Hash = 16
+;PawnPassedQuadCEG = 50
+;KnightEG = 3100
+;Clear Hash = 
+;PawnRank5MG = 30
+;KingCastlingMobilityEG = 0
+;KnightPawnAffinityEG = 30
+;PawnRank4MG = 20
+;RookOpenFileMG = 100
+;KingNearPasserEG = 200
+;PawnFilesCFMG = 0
+;PawnFilesBGEG = 0
+;PawnFilesAHEG = -50
+;KingShieldFarMG = 50
+;RookTrappedEG = 0
+;PawnPassedQuadBEG = 50
+;RookPawnAffinityEG = -70
+;KingShieldCloseMG = 150
+;BishopMG = 3010
+;PawnCentreEG = 0
+;HalfMoveFactor = 2048
+;MatHash = 1
+;TempoEG = 0
+;RookMobilityRankMG = 10
+;PawnPassedQuadCMG = 155
+;KingShieldCloseEG = 0
+;BishopMobilityMG = 40
+;PawnRank6MG = 40
+;BishopPairMG = 500
+;PawnEG = 1300
+;IIDMin = 2
+;PawnFilesCFEG = 0
+;RookTrappedMG = -400
+;RookSemiOpenFileEG = 20
+;KingCastlingMobilityMG = 100
+;PawnRank7MG = 50
+;NullReduction = 1
+;PawnIsolatedMG = -300
+;OppositeBishopFactorEG = 192
+;PawnFilesDEMG = 50
+;UCI_Chess960 = False
+;Ponder = True
+;QueenEG = 10000
+;RookMG = 5350
+;OppositeBishopFactorMG = 256
+;PawnOuterCentreEG = 0
+;RookEG = 5350
+;PawnHash = 1
+;RookOn7thEG = 100
+;RookOpenFileEG = 50
+;PawnCentreMG = 200
+;PawnMG = 900
+;TempoMG = 35
+;KnightPawnAffinityMG = 30
+;IIDReduction = 3
+;KingNearPasserMG = 0
+;WeightFactor = 144
+;RookOn7thMG = 50
+;Clear PawnHash = 
+;PawnRank6EG = 110
+;PawnFilesBGMG = -50
+;PawnFilesDEEG = 50
+;PawnDoubledMG = -100
+;PawnRank4EG = 35
+;PawnRank3EG = 10
+;RookMobilityFileEG = 30
+;PawnPassedQuadBMG = -109
+;Clear MatHash = 
+;PawnRank2MG = 0
+;PawnRank7EG = 150
+;BishopMobilityEG = 30
+;PawnDoubledEG = -200
+;BishopPairEG = 500
+;RookMobilityRankEG = 20
+;RookPawnAffinityMG = -70
+;PawnRank5EG = 80
+;PawnPassedQuadAEG = 50
+;PawnBlockedMG = -100
+;PawnFilesAHMG = -100
+;PawnRank3MG = 10
+;QueenMG = 10000
+;PawnBlockedEG = -100
+;RookSemiOpenFileMG = 50
+name = robocide
+small = roboci
+medium = robocide
+large = robocide
+elo = 2500
+
+[v-vajole]
+;BestMoveBook = False
+;SyzygyPath = <empty>
+;MultiPV = 1
+;Ponder = True
+;OwnBook = True
+;Hash = 1
+;SyzygyProbeDepth = 1
+;Threads = 1
+;UCI_EngineAbout = VajoletII by Marco Belli
+;UCI_ShowCurrLine = False
+name = Vajolet2 2.6
+small = vajole
+medium = Vajolet2
+large = Vajolet226
+elo = 2500
+
