zurichess file from Al

--- a/engines/armv6l/engines.ini
+++ b/engines/armv6l/engines.ini
@@ -219,7 +219,7 @@ elo = 1850
 ;Ponder = True
 ;Hash = 128
 name = Floyd 0.9
-small = floyd
+small = floyd9
 medium = Floyd09
 large = Floyd09
 elo = 2590
@@ -238,7 +238,7 @@ name = Laser 1.6 beta
 small = laser
 medium = Laser16
 large = Laser16beta
-elo = 2500
+elo = 2960
 
 [r-roboci]
 ;PawnOuterCentreMG = 50
@@ -336,7 +336,7 @@ name = robocide
 small = roboci
 medium = robocide
 large = robocide
-elo = 2500
+elo = 2190
 
 [v-vajole]
 ;BestMoveBook = False
@@ -353,5 +353,4 @@ name = Vajolet2 2.6
 small = vajole
 medium = Vajolet2
 large = Vajolet226
-elo = 2500
-
+elo = 2860
