--- a/engines/armv7l/engines.ini
+++ b/engines/armv7l/engines.ini
@@ -1,21 +1,21 @@
 [a-stockf]
-;Debug Log File =
-;SyzygyProbeLimit = 6
-;Clear Hash =
-;Move Overhead = 30
-;SyzygyPath = <empty>
-;Hash = 16
-;Contempt = 20
 ;Skill Level = 20
-;Threads = 1
-;UCI_Chess960 = False
-;SyzygyProbeDepth = 1
+;Move Overhead = 30
+;Contempt = 20
 ;MultiPV = 1
-;nodestime = 0
+;SyzygyProbeLimit = 6
+;SyzygyProbeDepth = 1
+;Hash = 16
+;UCI_Chess960 = False
 ;Syzygy50MoveRule = True
-;Slow Mover = 89
-;Minimum Thinking Time = 20
+;nodestime = 0
+;SyzygyPath = <empty>
 ;Ponder = False
+;Debug Log File = 
+;Clear Hash = 
+;Minimum Thinking Time = 20
+;Threads = 1
+;Slow Mover = 89
 name = Stockfish 9
 small = stockf
 medium = Stockf 9
@@ -23,24 +23,24 @@ large = Stockfish 9
 elo = 3360
 
 [b-texel]
-;MultiPV = 1
-;Hash = 16
 ;AnalysisAgeHash = True
-;UCI_AnalyseMode = False
-;Threads = 1
-;SyzygyPath = 
-;MinProbeDepth = 1
-;Clear Hash = 
-;GaviotaTbCache = 1
-;UCI_EngineAbout = Texel 1.07 32-bit by Peter Osterlund, see http://hem.bredband.net/petero2b/javachess/index.html#texel
-;BufferTime = 1000
-;BookFile = 
-;OwnBook = False
-;Ponder = True
-;UseNullMove = True
-;UCI_Opponent = 
 ;Strength = 1000
+;MultiPV = 1
+;UCI_AnalyseMode = False
 ;GaviotaTbPath = 
+;OwnBook = False
+;Hash = 16
+;GaviotaTbCache = 1
+;UCI_Opponent = 
+;BufferTime = 1000
+;MinProbeDepth = 1
+;UCI_EngineAbout = Texel 1.07 32-bit by Peter Osterlund, see http://hem.bredband.net/petero2b/javachess/index.html#texel
+;SyzygyPath = 
+;Ponder = True
+;Clear Hash = 
+;BookFile = 
+;Threads = 1
+;UseNullMove = True
 name = Texel 1.07 32-bit
 small = texel7
 medium = Texel107
@@ -48,37 +48,75 @@ large = Texel 107
 elo = 3050
 
 [c-arasan]
-;MultiPV = 1
 ;Hash = 32
-;Book selectivity = 50
-;Threads = 1
-;Tablebases = None
-;Use tablebases = False
-;SyzygyTbPath = syzygy
-;UCI_Elo = 2600
+;MultiPV = 1
+;Favor frequent book moves = 10
 ;OwnBook = True
-;Ponder = True
 ;Contempt = 0
 ;UCI_LimitStrength = False
-;SyzygyUse50MoveRule = True
+;UCI_Elo = 2600
+;Use tablebases = False
+;Ponder = True
+;SyzygyTbPath = syzygy
 ;SyzygyProbeDepth = 4
-name = Arasan TCEC12-66-gfef6f5b
+;Threads = 1
+;Favor best book moves = 50
+;SyzygyUse50MoveRule = True
+name = Arasan v21.0.0-21-geac5c47
 small = arasan
-medium = Arasan12
-large = Arasan 1266
+medium = Arasan21
+large = Arasan 2100
 elo = 2980
 
 [d-rodent]
-;VerboseBook = False
-;Hash = 16
 ;Verbose = False
-;UseBook = True
-;Ponder = False
-;Threads = 1
+;KeepPawn = 0
 ;MultiPV = 1
-;PersonalityFile = default.txt
-;Clear Hash = 
+;Fianchetto = 6
+;Ponder = False
+;PawnValue = 95
+;Forwardness = 0
+;BishopPair = 51
+;Outposts = 78
+;Hash = 16
+;OwnMobility = 100
+;PiecePressure = 109
+;PassedPawns = 100
+;PstStyle = 0
+;OwnAttack = 100
+;KingTropism = 20
+;OppAttack = 100
+;EvalBlur = 0
+;KeepKnight = 0
+;QueenValue = 1000
+;PawnStorm = 99
+;NpsLimit = 0
+;KnightValue = 310
+;PiecePlacement = 75
+;Selectivity = 175
 ;TimeBuffer = 10
+;RookValue = 514
+;Material = 100
+;GuideBookFile = guide.bin
+;PawnStructure = 100
+;ExchangeImbalance = 30
+;Clear Hash = 
+;MainBookFile = rodent.bin
+;VerboseBook = False
+;Lines = 100
+;RiskyDepth = 0
+;SearchSkill = 10
+;PawnShield = 119
+;Contempt = 0
+;KeepBishop = 0
+;KnightLikesClosed = 6
+;BishopValue = 322
+;SlowMover = 100
+;KeepQueen = 0
+;UseBook = True
+;KeepRook = 0
+;OppMobility = 100
+;Threads = 1
 name = Rodent III 0.250 32-bit/GCC 6.3.0 20170516
 small = rodent
 medium = Rodent3
@@ -87,10 +125,10 @@ elo = 2920
 
 [e-zurich]
 ;MultiPV = 1
-;Hash = 64
-;UCI_AnalyseMode = False
-;Handicap Level = 0
 ;Ponder = True
+;Handicap Level = 0
+;UCI_AnalyseMode = False
+;Hash = 64
 name = zurichess neuchatel
 small = zurich
 medium = Zurich N
@@ -98,51 +136,51 @@ large = Zurichess N
 elo = 2790
 
 [f-wyld]
-;KingShelterFarMg = 10
-;RookMobilityWt = 5
-;KnightMobilityWt = 8
-;QueenMobilityWt = 4
-;RookOpenFileMg = 20
-;RookValueMg = 600
-;IsolatedPawnMg = -10
-;KnightKingAtkWt = 3
-;Ponder = True
-;BishopPairMg = 50
-;DoubledPawnsEg = -10
-;BishopOutpostEg = 5
-;RookOn7thEg = 20
-;UCI_Chess960 = False
-;QueenValueMg = 1200
-;SyzygyPath = <empty>
-;RookValueEg = 550
-;RookOpenFileEg = 20
-;BishopOutpostMg = 10
-;KingShelterCloseMg = 20
-;BishopPairEg = 80
-;BishopValueMg = 400
 ;BishopMobilityWt = 5
-;RookSemiOpenFileMg = 5
-;MoveOverhead = 30
-;PersonaPath = <empty>
-;BishopValueEg = 330
+;KingShelterFarMg = 10
+;KnightValueEg = 320
+;KnightMobilityWt = 8
 ;QueenValueEg = 1000
-;PawnValueMg = 90
-;BishopKingAtkWt = 3
-;KnightValueMg = 400
 ;KingShelterFarEg = 5
-;PawnValueEg = 100
+;Hash = 128
+;RookValueMg = 600
+;KingShelterCloseMg = 20
+;BishopValueMg = 400
+;SyzygyPath = <empty>
+;Ponder = True
+;RookOn7thEg = 20
+;BishopOutpostEg = 5
+;KnightOutpostEg = 10
+;MoveOverhead = 30
+;DoubledPawnsMg = -10
+;RookOpenFileMg = 20
 ;KingShelterCloseEg = 10
 ;RookOn7thMg = 40
-;Hash = 128
-;DoubledPawnsMg = -10
+;BishopValueEg = 330
+;QueenKingAtkWt = 5
+;IsolatedPawnMg = -10
+;DoubledPawnsEg = -10
 ;IsolatedPawnEg = -10
-;Threads = 1
-;KnightOutpostEg = 10
+;BishopOutpostMg = 10
+;PawnValueEg = 100
+;KnightOutpostMg = 20
+;KnightKingAtkWt = 3
+;BishopPairEg = 80
+;PawnValueMg = 90
+;RookValueEg = 550
+;PersonaPath = <empty>
+;BishopKingAtkWt = 3
+;QueenValueMg = 1200
+;UCI_Chess960 = False
+;RookOpenFileEg = 20
+;KnightValueMg = 400
+;BishopPairMg = 50
 ;RookKingAtkWt = 4
 ;RookSemiOpenFileEg = 5
-;QueenKingAtkWt = 5
-;KnightValueEg = 320
-;KnightOutpostMg = 20
+;QueenMobilityWt = 4
+;Threads = 1
+;RookMobilityWt = 5
+;RookSemiOpenFileMg = 5
 name = WyldChess 20112017
 small = wyld
 medium = Wyld Chs
@@ -150,26 +188,26 @@ large = WyldChess
 elo = 2630
 
 [g-galjoe]
-;Hash = 128
-;UCI_Elo = 2000
-;OwnBook = False
-;Ponder = True
-;MultiPV = 1
-;UCI_LimitStrength = False
-;UCI_Chess960 = False
 ;Debug = False
+;UCI_Elo = 2000
+;MultiPV = 1
+;Ponder = True
+;OwnBook = False
+;Hash = 128
+;UCI_Chess960 = False
+;UCI_LimitStrength = False
 name = Galjoen 0.38
 small = galjoe
 medium = Galjoen
-large = Galjoen 038
+large = Galjoen038
 elo = 2110
 
 [h-sayuri]
-;Threads = 1
-;Hash = 1
 ;UCI_AnalyseMode = False
 ;Clear Hash = 
 ;Ponder = True
+;Threads = 1
+;Hash = 1
 name = Sayuri 2018.05.23
 small = sayuri
 medium = Sayuri
@@ -177,150 +215,142 @@ large = Sayuri
 elo = 1850
 
 [i-floyd]
-;Hash = 128
 ;Clear Hash = 
 ;Ponder = True
+;Hash = 128
 name = Floyd 0.9
 small = floyd9
-medium = Floyd 09
-large = Floyd 09
+medium = Floyd09
+large = Floyd09
 elo = 2590
 
 [l-laser]
+;BufferTime = 300
 ;SyzygyPath = <empty>
-;Hash = 16
-;ScaleKingSafety = 100
 ;MultiPV = 1
-;Threads = 1
-;EvalCache = 16
 ;Ponder = False
 ;ScaleMaterial = 100
-;BufferTime = 300
+;Hash = 16
+;ScaleKingSafety = 100
+;EvalCache = 16
+;Threads = 1
 name = Laser 1.6 beta
 small = laser
-medium = Laser 16
+medium = Laser16
 large = Laser16beta
 elo = 2960
 
 [r-roboci]
-;PawnIsolatedEG = -200
-;TempoKQKQMG = 200
-;TempoKQKQEG = 200
-;RookPawnAffinityEG = -70
-;PawnRank7EG = 150
-;PawnPassedQuadAEG = 50
-;NullReduction = 1
-;PawnFilesCFMG = 0
-;PawnPassedQuadCEG = 50
-;OppositeBishopFactorMG = 256
-;PawnRank2MG = 0
-;BishopPairEG = 500
-;BishopMobilityEG = 30
-;RookEG = 5350
-;KingShieldFarMG = 50
-;KingShieldFarEG = 0
-;MatHash = 1
-;PawnCentreEG = 0
-;PawnBlockedEG = -100
-;RookMG = 5350
-;PawnPassedQuadBMG = -109
-;Hash = 16
-;BishopPairMG = 500
-;Ponder = True
-;PawnEG = 1300
-;PawnRank4MG = 20
-;KingShieldCloseMG = 150
-;HalfMoveFactor = 2048
-;QueenMG = 10000
-;KnightPawnAffinityEG = 30
-;OppositeBishopFactorEG = 192
-;RookMobilityRankEG = 20
-;PawnCentreMG = 200
-;RookPawnAffinityMG = -70
-;QueenEG = 10000
-;RookSemiOpenFileMG = 50
-;KingCastlingMobilityNoneEG = 0
 ;PawnOuterCentreMG = 50
-;KingShieldCloseEG = 0
-;KnightPawnAffinityMG = 30
 ;PawnPassedQuadAMG = 56
-;RookOn7thEG = 100
-;PawnFilesAHEG = -50
-;TempoKQQKQQMG = 500
-;PawnOuterCentreEG = 0
-;PawnFilesCFEG = 0
-;IIDReduction = 3
-;RookSemiOpenFileEG = 20
-;Clear MatHash = 
-;IIDMin = 2
-;BishopMG = 3010
-;PawnRank3EG = 10
 ;PawnRank2EG = 0
-;BishopMobilityMG = 40
-;KnightEG = 3100
 ;RookMobilityFileMG = 20
+;KingShieldFarEG = 0
+;PawnIsolatedEG = -200
 ;BishopEG = 3070
-;TempoEG = 0
-;KingCastlingMobilityKQMG = 200
-;PawnFilesDEEG = 50
-;PawnFilesBGEG = 0
-;KingCastlingMobilityQMG = 100
-;Clear PawnHash = 
-;TempoMG = 35
-;RookOn7thMG = 50
-;PawnPassedQuadBEG = 50
-;PawnFilesDEMG = 50
-;PawnHash = 1
-;RookMobilityFileEG = 30
-;KingCastlingMobilityKEG = 0
-;RookTrappedMG = -400
-;PawnRank3MG = 10
-;RookMobilityRankMG = 10
-;KingCastlingMobilityKMG = 100
 ;KnightMG = 3100
-;PawnPassedQuadCMG = 155
-;PawnIsolatedMG = -300
+;Hash = 16
+;PawnPassedQuadCEG = 50
+;KnightEG = 3100
 ;Clear Hash = 
-;PawnRank6MG = 40
-;TempoKQQKQQEG = 500
-;KingCastlingMobilityQEG = 0
-;KingCastlingMobilityKQEG = 0
-;PawnDoubledEG = -200
-;PawnRank4EG = 35
-;PawnFilesBGMG = -50
-;PawnRank7MG = 50
-;PawnRank5EG = 80
-;PawnMG = 900
-;PawnFilesAHMG = -100
 ;PawnRank5MG = 30
-;PawnDoubledMG = -100
-;WeightFactor = 144
-;KingCastlingMobilityNoneMG = 0
-;PawnRank6EG = 110
-;PawnBlockedMG = -100
-;RookTrappedEG = 0
-;RookOpenFileEG = 50
+;KingCastlingMobilityEG = 0
+;KnightPawnAffinityEG = 30
+;PawnRank4MG = 20
 ;RookOpenFileMG = 100
+;KingNearPasserEG = 200
+;PawnFilesCFMG = 0
+;PawnFilesBGEG = 0
+;PawnFilesAHEG = -50
+;KingShieldFarMG = 50
+;RookTrappedEG = 0
+;PawnPassedQuadBEG = 50
+;RookPawnAffinityEG = -70
+;KingShieldCloseMG = 150
+;BishopMG = 3010
+;PawnCentreEG = 0
+;HalfMoveFactor = 2048
+;MatHash = 1
+;TempoEG = 0
+;RookMobilityRankMG = 10
+;PawnPassedQuadCMG = 155
+;KingShieldCloseEG = 0
+;BishopMobilityMG = 40
+;PawnRank6MG = 40
+;BishopPairMG = 500
+;PawnEG = 1300
+;IIDMin = 2
+;PawnFilesCFEG = 0
+;RookTrappedMG = -400
+;RookSemiOpenFileEG = 20
+;KingCastlingMobilityMG = 100
+;PawnRank7MG = 50
+;NullReduction = 1
+;PawnIsolatedMG = -300
+;OppositeBishopFactorEG = 192
+;PawnFilesDEMG = 50
+;UCI_Chess960 = False
+;Ponder = True
+;QueenEG = 10000
+;RookMG = 5350
+;OppositeBishopFactorMG = 256
+;PawnOuterCentreEG = 0
+;RookEG = 5350
+;PawnHash = 1
+;RookOn7thEG = 100
+;RookOpenFileEG = 50
+;PawnCentreMG = 200
+;PawnMG = 900
+;TempoMG = 35
+;KnightPawnAffinityMG = 30
+;IIDReduction = 3
+;KingNearPasserMG = 0
+;WeightFactor = 144
+;RookOn7thMG = 50
+;Clear PawnHash = 
+;PawnRank6EG = 110
+;PawnFilesBGMG = -50
+;PawnFilesDEEG = 50
+;PawnDoubledMG = -100
+;PawnRank4EG = 35
+;PawnRank3EG = 10
+;RookMobilityFileEG = 30
+;PawnPassedQuadBMG = -109
+;Clear MatHash = 
+;PawnRank2MG = 0
+;PawnRank7EG = 150
+;BishopMobilityEG = 30
+;PawnDoubledEG = -200
+;BishopPairEG = 500
+;RookMobilityRankEG = 20
+;RookPawnAffinityMG = -70
+;PawnRank5EG = 80
+;PawnPassedQuadAEG = 50
+;PawnBlockedMG = -100
+;PawnFilesAHMG = -100
+;PawnRank3MG = 10
+;QueenMG = 10000
+;PawnBlockedEG = -100
+;RookSemiOpenFileMG = 50
 name = robocide
 small = roboci
-medium = Robocide
-large = Robocide
+medium = robocide
+large = robocide
 elo = 2190
 
 [v-vajole]
 ;BestMoveBook = False
-;UCI_EngineAbout = VajoletII by Marco Belli
-;Hash = 1
-;UCI_ShowCurrLine = False
-;OwnBook = True
-;Ponder = True
-;Threads = 1
-;MultiPV = 1
 ;SyzygyPath = <empty>
+;MultiPV = 1
+;Ponder = True
+;OwnBook = True
+;Hash = 1
 ;SyzygyProbeDepth = 1
+;Threads = 1
+;UCI_EngineAbout = VajoletII by Marco Belli
+;UCI_ShowCurrLine = False
 name = Vajolet2 2.6
 small = vajole
 medium = Vajolet2
-large = Vajolet2 26
+large = Vajolet226
 elo = 2860
-
