--- a/engines/armv6l/engines.ini
+++ b/engines/armv6l/engines.ini
@@ -129,7 +129,7 @@ elo = 2920
 ;Handicap Level = 0
 ;UCI_AnalyseMode = False
 ;Hash = 64
-name = zurichess neuchatel
+name = zurichess nidwalden
 small = zurich
 medium = Zurich N
 large = Zurichess N
