--- a/engines/armv7l/engines.ini
+++ b/engines/armv7l/engines.ini
@@ -18,9 +18,9 @@
 ;Slow Mover = 89
 name = Stockfish 9
 small = stockf
-medium = Stockf 9
+medium = stockf 9
 large = Stockfish 9
-elo = 3360
+elo = 3200
 
 [b-texel]
 ;AnalysisAgeHash = True
@@ -45,7 +45,7 @@ name = Texel 1.07 32-bit
 small = texel7
 medium = Texel107
 large = Texel 107
-elo = 3050
+elo = 2890
 
 [c-arasan]
 ;Hash = 32
@@ -66,7 +66,7 @@ name = Arasan v21.0.0-21-geac5c47
 small = arasan
 medium = Arasan21
 large = Arasan 2100
-elo = 2980
+elo = 2830
 
 [d-rodent]
 ;Verbose = False
@@ -121,7 +121,7 @@ name = Rodent III 0.250 32-bit/GCC 6.3.0 20170516
 small = rodent
 medium = Rodent3
 large = Rodent3 250
-elo = 2920
+elo = 2750
 
 [e-zurich]
 ;MultiPV = 1
@@ -133,7 +133,7 @@ name = zurichess nidwalden
 small = zurich
 medium = Zurich N
 large = Zurichess N
-elo = 2790
+elo = 2600
 
 [f-wyld]
 ;BishopMobilityWt = 5
@@ -185,7 +185,7 @@ name = WyldChess 20112017
 small = wyld
 medium = Wyld Chs
 large = WyldChess
-elo = 2630
+elo = 2370
 
 [g-galjoe]
 ;Debug = False
@@ -196,11 +196,11 @@ elo = 2630
 ;Hash = 128
 ;UCI_Chess960 = False
 ;UCI_LimitStrength = False
-name = Galjoen 0.38
+name = Galjoen 0.39.2
 small = galjoe
 medium = Galjoen
-large = Galjoen038
-elo = 2110
+large = Galjoen 039
+elo = 2150
 
 [h-sayuri]
 ;UCI_AnalyseMode = False
@@ -212,7 +212,7 @@ name = Sayuri 2018.05.23
 small = sayuri
 medium = Sayuri
 large = Sayuri
-elo = 1850
+elo = 1650
 
 [i-floyd]
 ;Clear Hash = 
@@ -220,9 +220,9 @@ elo = 1850
 ;Hash = 128
 name = Floyd 0.9
 small = floyd9
-medium = Floyd09
-large = Floyd09
-elo = 2590
+medium = Floyd 09
+large = Floyd 09
+elo = 2330
 
 [l-laser]
 ;BufferTime = 300
@@ -236,9 +236,9 @@ elo = 2590
 ;Threads = 1
 name = Laser 1.6 beta
 small = laser
-medium = Laser16
+medium = Laser 16
 large = Laser16beta
-elo = 2960
+elo = 2870
 
 [r-roboci]
 ;PawnOuterCentreMG = 50
@@ -334,9 +334,9 @@ elo = 2960
 ;RookSemiOpenFileMG = 50
 name = robocide
 small = roboci
-medium = robocide
-large = robocide
-elo = 2190
+medium = Robocide
+large = Robocide
+elo = 2020
 
 [v-vajole]
 ;BestMoveBook = False
@@ -352,5 +352,6 @@ elo = 2190
 name = Vajolet2 2.6
 small = vajole
 medium = Vajolet2
-large = Vajolet226
-elo = 2860
+large = Vajolet2 26
+elo = 2820
+
