Update to newest picochess version(s)

--- a/books/books.ini
+++ b/books/books.ini
@@ -77,3 +77,9 @@ large = Pro
 small = gm2001
 medium = GM 2001
 large = GM 2001
+
+[q-feobos.bin]
+small = feobos
+medium = Feobos20
+large = Feobos 201
+
