--- a/engines/armv6l/engines.ini
+++ b/engines/armv6l/engines.ini
@@ -11,41 +11,41 @@
 ;nodestime = 0
 ;SyzygyPath = <empty>
 ;Ponder = False
-;Debug Log File = 
-;Clear Hash = 
+;Debug Log File =
+;Clear Hash =
 ;Minimum Thinking Time = 20
 ;Threads = 1
 ;Slow Mover = 89
-name = Stockfish 9
+name = Stockfish 10
 small = stockf
-medium = Stockf 9
-large = Stockfish 9
-elo = 3360
+medium = Stockf10
+large = Stockfish10
+elo = 3200
 
 [b-texel]
 ;AnalysisAgeHash = True
 ;Strength = 1000
 ;MultiPV = 1
 ;UCI_AnalyseMode = False
-;GaviotaTbPath = 
+;GaviotaTbPath =
 ;OwnBook = False
 ;Hash = 16
 ;GaviotaTbCache = 1
-;UCI_Opponent = 
+;UCI_Opponent =
 ;BufferTime = 1000
 ;MinProbeDepth = 1
 ;UCI_EngineAbout = Texel 1.07 32-bit by Peter Osterlund, see http://hem.bredband.net/petero2b/javachess/index.html#texel
-;SyzygyPath = 
+;SyzygyPath =
 ;Ponder = True
-;Clear Hash = 
-;BookFile = 
+;Clear Hash =
+;BookFile =
 ;Threads = 1
 ;UseNullMove = True
 name = Texel 1.07 32-bit
 small = texel7
 medium = Texel107
 large = Texel 107
-elo = 3050
+elo = 2890
 
 [c-arasan]
 ;Hash = 32
@@ -62,11 +62,11 @@ elo = 3050
 ;Threads = 1
 ;Favor best book moves = 50
 ;SyzygyUse50MoveRule = True
-name = Arasan v21.0.0-21-geac5c47
+name = Arasan v21.4.0
 small = arasan
 medium = Arasan21
-large = Arasan 2100
-elo = 2980
+large = Arasan 2140
+elo = 2830
 
 [d-rodent]
 ;Verbose = False
@@ -100,7 +100,7 @@ elo = 2980
 ;GuideBookFile = guide.bin
 ;PawnStructure = 100
 ;ExchangeImbalance = 30
-;Clear Hash = 
+;Clear Hash =
 ;MainBookFile = rodent.bin
 ;VerboseBook = False
 ;Lines = 100
@@ -117,11 +117,11 @@ elo = 2980
 ;KeepRook = 0
 ;OppMobility = 100
 ;Threads = 1
-name = Rodent III 0.275 32-bit/GCC 6.3.0 20170516
+name = Rodent III 0.287 32-bit/GCC 6.3.0 20170516
 small = rodent
 medium = Rodent3
-large = Rodent3 275
-elo = 2920
+large = Rodent3 287
+elo = 2750
 
 [e-zurich]
 ;MultiPV = 1
@@ -133,7 +133,7 @@ name = zurichess nidwalden
 small = zurich
 medium = Zurich N
 large = Zurichess N
-elo = 2790
+elo = 2600
 
 [f-wyld]
 ;BishopMobilityWt = 5
@@ -185,7 +185,7 @@ name = WyldChess 20112017
 small = wyld
 medium = Wyld Chs
 large = WyldChess
-elo = 2630
+elo = 2370
 
 [g-galjoe]
 ;Debug = False
@@ -196,15 +196,15 @@ elo = 2630
 ;Hash = 128
 ;UCI_Chess960 = False
 ;UCI_LimitStrength = False
-name = Galjoen 0.38
+name = Galjoen 0.40.1
 small = galjoe
 medium = Galjoen
-large = Galjoen038
-elo = 2110
+large = Galjoen 040
+elo = 2150
 
 [h-sayuri]
 ;UCI_AnalyseMode = False
-;Clear Hash = 
+;Clear Hash =
 ;Ponder = True
 ;Threads = 1
 ;Hash = 1
@@ -212,17 +212,17 @@ name = Sayuri 2018.05.23
 small = sayuri
 medium = Sayuri
 large = Sayuri
-elo = 1850
+elo = 1650
 
 [i-floyd]
-;Clear Hash = 
+;Clear Hash =
 ;Ponder = True
 ;Hash = 128
 name = Floyd 0.9
 small = floyd9
-medium = Floyd09
-large = Floyd09
-elo = 2590
+medium = Floyd 09
+large = Floyd 09
+elo = 2330
 
 [l-laser]
 ;BufferTime = 300
@@ -234,11 +234,11 @@ elo = 2590
 ;ScaleKingSafety = 100
 ;EvalCache = 16
 ;Threads = 1
-name = Laser 1.6 beta
-small = laser
-medium = Laser16
-large = Laser16beta
-elo = 2960
+name = Laser 1.7
+small = laser7
+medium = Laser 17
+large = Laser 17
+elo = 2870
 
 [r-roboci]
 ;PawnOuterCentreMG = 50
@@ -252,7 +252,7 @@ elo = 2960
 ;Hash = 16
 ;PawnPassedQuadCEG = 50
 ;KnightEG = 3100
-;Clear Hash = 
+;Clear Hash =
 ;PawnRank5MG = 30
 ;KingCastlingMobilityEG = 0
 ;KnightPawnAffinityEG = 30
@@ -307,7 +307,7 @@ elo = 2960
 ;KingNearPasserMG = 0
 ;WeightFactor = 144
 ;RookOn7thMG = 50
-;Clear PawnHash = 
+;Clear PawnHash =
 ;PawnRank6EG = 110
 ;PawnFilesBGMG = -50
 ;PawnFilesDEEG = 50
@@ -316,7 +316,7 @@ elo = 2960
 ;PawnRank3EG = 10
 ;RookMobilityFileEG = 30
 ;PawnPassedQuadBMG = -109
-;Clear MatHash = 
+;Clear MatHash =
 ;PawnRank2MG = 0
 ;PawnRank7EG = 150
 ;BishopMobilityEG = 30
@@ -334,9 +334,9 @@ elo = 2960
 ;RookSemiOpenFileMG = 50
 name = robocide
 small = roboci
-medium = robocide
-large = robocide
-elo = 2190
+medium = Robocide
+large = Robocide 04
+elo = 2020
 
 [v-vajole]
 ;BestMoveBook = False
@@ -349,8 +349,8 @@ elo = 2190
 ;Threads = 1
 ;UCI_EngineAbout = VajoletII by Marco Belli
 ;UCI_ShowCurrLine = False
-name = Vajolet2 2.6
+name = Vajolet2 2.6.2
 small = vajole
 medium = Vajolet2
-large = Vajolet226
-elo = 2860
+large = Vajolet 262
+elo = 2820
