--- a/voices/voices.ini
+++ b/voices/voices.ini
@@ -1,12 +1,12 @@
 [it]
-    [[luigi]]
-        small = luigi
-        medium = Luigi
-        large = Luigi
     [[christina]]
         small = christ
         medium = Christin
         large = Christina
+    [[luigi]]
+        small = luigi
+        medium = Luigi
+        large = Luigi
 [es]
     [[christina]]
         small = christ
@@ -17,14 +17,14 @@
         medium = Santiago
         large = Santiago
 [en]
-    [[al]]
-        small = al
-        medium = Al
-        large = Al
     [[christina]]
         small = christ
         medium = Christin
         large = Christina
+    [[al]]
+        small = al
+        medium = Al
+        large = Al
 [fr]
     [[christina]]
         small = christ
@@ -37,8 +37,8 @@
         large = Christina
     [[dirkjan]]
         small = dirkja
-        medium = DirkJan
-        large = DirkJan
+        medium = Dirkjan
+        large = Dirkjan
 [de]
     [[christina]]
         small = christ
